# trident

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/: __init__.py  autogen_review.py  hospital_mcp.py  llm_manager.py  medical_crew.py  server.py  trident.py
static/: app.js  index.html  style.css
