[project]
name = "trident"
version = "0.1.0"
description = "PEAKWHALE™ TRIDENT - AI-Powered Medical Triage System with Multi-Agent Orchestration"
readme = "README.md"
requires-python = ">=3.11, <3.13"
dependencies = [
    "crewai>=1.7.2",
    "fastmcp>=2.12.5",
    "langgraph>=1.0.5",
    "mcp[cli]>=1.16.0",
    "python-dotenv>=1.1.1",
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "langchain-ollama>=1.0.1",
    "litellm>=1.75.3",
    "pyautogen>=0.2.0,<0.3.0",
]
